# video-to-insights-nvidia-parakeet-llama

./: README.md  package.json
apps/web/: package.json
services/api/: pyproject.toml
